tests/NormalTests/paczka1/small_fuzzy/10774370.err
Error in line 6: n3hVfh A46 41,1
Error in line 1: h5w5Khd A46 53,0
Error in line 8: n3hVfh S245 49,9
